 * Maintenance: Split up `wagtail.admin.panels` into submodules, existing exports have been preserved (Matt Westcott)
 * Maintenance: Refactor userbar styles to use the same stylesheet as other components (Thibaud Colas)
 * Maintenance: Add deprecation warnings for `wagtail.core` and other imports deprecated in Wagtail 3.0 (Matt Westcott)


4.1.2 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~~~

 * Fix: Make "Cancel scheduled publish" button correctly redirect back to the edit view (Sage Abdullah)
 * Fix: Prevent crash when reverting revisions on a snippet with `PreviewableMixin` applied (Sage Abdullah)
 * Fix: Use consistent heading styles on top-level fields in the page editor (Sage Abdullah)
 * Fix: Allow button labels to wrap onto two lines in dropdown buttons (Coen van der Kamp)
 * Fix: Move DateField, DateTimeField, TimeField comment buttons to be right next to the fields (Theresa Okoro)
 * Fix: Support text resizing in workflow steps cards (Ivy Jeptoo)
 * Fix: Use the correct padding for autocomplete block picker (Umar Farouk Yunusa)
 * Fix: Fix horizontal positioning of rich text inline toolbar (Thibaud Colas)
 * Fix: Close the userbar when clicking its toggle (Albina Starykova)


4.1.1 (11.11.2022)
~~~~~~~~~~~~~~~~~~

 * Fix: Fix issue where lock/unlock buttons would not work on the Dashboard (home) page or the page index listing via the status sidebar (Stefan Hammer)
 * Fix: Fix disabled style on StreamField add button (Matt Westcott)
 * Fix: Ensure models are fully loaded before registering snippets, to avoid circular import issues (Matt Westcott)
 * Fix: Prevent fields without a `verbose_name` property from breaking usage report views (Matt Westcott)
 * Fix: Exclude tags from the reference index (Matt Westcott)
 * Fix: Fix errors in handling generic foreign keys when populating the reference index (Matt Westcott)
 * Fix: Prevent error in handling null ParentalKeys when populating the reference index (Matt Westcott)