@@ -2,6 +2,7 @@ import type { Definition } from '@hotwired/stimulus';
 
 import { AutoFieldController } from './AutoFieldController';
 import { SkipLinkController } from './SkipLinkController';
+import { UpgradeController } from './UpgradeController';
 
 /**
  * Important: Only add default core controllers that should load with the base admin JS bundle.
@@ -9,4 +10,5 @@ import { SkipLinkController } from './SkipLinkController';
 export const coreControllerDefinitions: Definition[] = [
   { controllerConstructor: AutoFieldController, identifier: 'w-auto-field' },
   { controllerConstructor: SkipLinkController, identifier: 'w-skip-link' },
+  { controllerConstructor: UpgradeController, identifier: 'w-upgrade' },
 ];
