@@ -139,6 +139,7 @@ This feature was developed by Jake Howard.
  * Split up `wagtail.admin.panels` into submodules, existing exports have been preserved (Matt Westcott)
  * Refactor userbar styles to use the same stylesheet as other components (Thibaud Colas)
  * Add deprecation warnings for `wagtail.core` and other imports deprecated in Wagtail 3.0 (Matt Westcott)
+ * Migrate admin upgrade notification message implementation to a Stimulus controller (Loveth Omokaro)
 
 ## Upgrade considerations
 
